--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
             <div class="ui divider container m-margin"></div>
 
-            <section class="vision">
+            <section class="vision wow bounceInUp">
                 <div class="ui three column relaxed grid container">
-                    <div class="column wow rollIn">
+                    <div class="column">
                         <div class="m-item">
                             <h1>
                                 <i  class="ui comment icon"></i>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
 
-                    <div class="column wow rollIn">
+                    <div class="column">
                         <div class="m-item">
                             <h1>
                                 <i  class="ui leaf icon"></i>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
 
-                    <div class="column wow rollIn">
+                    <div class="column">
                         <div class="m-item">
                             <h1>
                                 <i  class="ui lemon icon"></i>
@@ -128,7 +128,7 @@
                                 NOTICE
                             </h1>
 
-                            <div class="ui grid notice-item">
+                            <div class="ui stretched grid notice-item">
                                 <div class="three wide column">
                                     <h5>APR' 16</h5>
                                     <h1>28</h1>
@@ -221,6 +221,7 @@
             <div class="ui divider container m-margin"></div>
 
             <footer>
+
                 <div class="ui grid container wow fadeIn">
 
                     <div class="eight wide column">
@@ -228,9 +229,8 @@
                             <i class="ui university icon"></i>
                             School Name
                         </h1>
-                        <p>Address</p>
-                        <p>Address</p>
-                        <p>Address</p>
+                        <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
+                        <p>Bangladesh</p>
                     </div>
 
                     <div class="eight wide column">
@@ -243,7 +243,7 @@
                                 </h1>
 
                                 <p>Mobile: 01711981813</p>
-                                <p>Mobile: 01711981813</p>
+                                <p>Email: school@example.com</p>
                                 <p>Telephone: 01711981813</p>
                             </div>
 
@@ -253,9 +253,22 @@
                                     Location
                                 </h1>
 
-                                <p>Lorem Ipsum Lorem Ipsum</p>
-                                <p>Lorem Ipsum</p>
+                                <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
+                                <p>Bangladesh</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui grid container wow fadeIn">
+                    <div class="column">
+                        <div class="ui secondary menu footer-nav">
+                            <a class="item">SSC Results</a>
+                            <a class="item">Education Board</a>
+                            <a class="item">SSC Results</a>
+                            <a class="item">Education Board</a>
+                            <a class="item">SSC Results</a>
+                            <a class="item">Education Board</a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +279,7 @@
                         <p>
                             <i class="ui copyright icon"></i>
                             <a href="#">
-                                Zirrah
+                                Crazers
                             </a>
                         </p>
                     </div>
