responsive front-page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Welcome Page</title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/master.css">
@@ -57,7 +59,7 @@
             <div class="ui divider container m-margin"></div>
 
             <section class="vision wow bounceInUp">
-                <div class="ui three column relaxed grid container">
+                <div class="ui stackable three column relaxed stretched grid container">
                     <div class="column">
                         <div class="m-item">
                             <h1>
@@ -102,13 +104,13 @@
             <div class="ui divider container m-margin"></div>
 
             <section class="about_latest">
-                <div class="ui two column relaxed grid container">
+                <div class="ui doubling two column relaxed grid container">
                     <div class="column wow zoomInLeft">
                         <h1 class="ui header">
                             <i class="ui sticky note icon"></i>
                             WELCOME
                         </h1>
-                        <div class="ui two column grid">
+                        <div class="ui stackable two column grid">
                             <div class="column">
                                 <img class="ui medium left floated bordered image" src="images/school_building.jpg">
                             </div>
@@ -128,8 +130,8 @@
                                 NOTICE
                             </h1>
 
-                            <div class="ui stretched grid notice-item">
-                                <div class="three wide column">
+                            <div class="ui grid notice-item">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
                                     <h5>APR' 16</h5>
                                     <h1>28</h1>
                                 </div>
@@ -141,7 +143,7 @@
                             </div>
 
                             <div class="ui grid notice-item">
-                                <div class="three wide column">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
                                     <h5>APR' 16</h5>
                                     <h1>28</h1>
                                 </div>
@@ -153,7 +155,7 @@
                             </div>
 
                             <div class="ui grid notice-item">
-                                <div class="three wide column">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
                                     <h5>APR' 16</h5>
                                     <h1>28</h1>
                                 </div>
@@ -183,7 +185,17 @@
                 </div>
 
 
-                <div class="ui equal width grid container">
+                <div class="ui doubling stackable four column grid container">
+
+                    <div class="column">
+                        <div class="ui segment">
+                            <img class="ui fluid image" src="images/teacher.jpg" alt="">
+                        </div>
+
+                        <h2>Chairman</h2>
+                        <p>Md.Nurul Islam</p>
+                        <p>Lorem Ipsum Lorem Ipsum</p>
+                    </div>
 
                     <div class="column">
                         <div class="ui segment">
@@ -224,7 +236,7 @@
 
                 <div class="ui grid container wow fadeIn">
 
-                    <div class="eight wide column">
+                    <div class="eight wide computer twelve wide tablet column">
                         <h1 class="ui header">
                             <i class="ui university icon"></i>
                             School Name
@@ -233,8 +245,8 @@
                         <p>Bangladesh</p>
                     </div>
 
-                    <div class="eight wide column">
-                        <div class="ui two column grid">
+                    <div class="eight wide computer twelve wide tablet column">
+                        <div class="ui stackable two column grid">
 
                             <div class="column">
                                 <h1 class="ui header">
