--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <title>Welcome Page</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+        <link rel="stylesheet" href="css/owl.carousel.min.css">
+        <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/master.css">
+
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
     </head>
     <body>
 
@@ -46,10 +55,32 @@
             </nav>
 
             <header>
-                <div class="ui grid">
-                    <div class="column">
-                        <img class="ui image" src="images/slider.jpg" alt="">
-                    </div>
+                <div class="ui grid container">
+                    <div class="column m-divider">
+                        <div class="header-carousel owl-carousel owl-theme">
+                            <div class="item">
+                                <img class="owl-lazy" data-src="images/slider-01.jpeg" alt="Lazy Owl Image">
+                                <div class="caption">
+                                    <h2>Heading</h2>
+                                    <p>Description</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img class="owl-lazy" data-src="images/slider-02.jpeg" alt="Lazy Owl Image">
+                                <div class="caption">
+                                    <h2>Heading</h2>
+                                    <p>Description</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img class="owl-lazy" data-src="images/slider-03.jpeg" alt="Lazy Owl Image">
+                                <div class="caption">
+                                    <h2>Heading</h2>
+                                    <p>Description</p>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </header>
@@ -290,6 +321,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
         <script src="js/master.js"></script>
     </body>
 </html>
