--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 </div>
             </nav>
 
+            <!-- <div class="m-divider"></div> -->
+            <!-- <div class="m-divider"></div> -->
+
             <header>
                 <div class="ui grid container">
                     <div class="column m-divider">
@@ -61,22 +64,22 @@
                             <div class="item">
                                 <img class="owl-lazy" data-src="images/slider-01.jpeg" alt="Lazy Owl Image">
                                 <div class="caption">
-                                    <h2>Heading</h2>
-                                    <p>Description</p>
+                                    <h4 data-animation-in="fadeIn" data-animation-out="animate-out fadeOutDown">Slide 1 Heading</h4>
+                                    <p data-animation-in="zoomInUp" data-animation-out="animate-out rollOut">Cras a elementum dolor. Praesent aliquam sapien ac eros semper ullamcorper. Sed imperdiet enim at sodales suscipit. Aenean eget faucibus ipsum.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img class="owl-lazy" data-src="images/slider-02.jpeg" alt="Lazy Owl Image">
                                 <div class="caption">
-                                    <h2>Heading</h2>
-                                    <p>Description</p>
+                                    <h4 data-animation-in="fadeIn" data-animation-out="animate-out fadeOutDown">Slide 2 Heading</h4>
+                                    <p data-animation-in="zoomInDown" data-animation-out="animate-out rollOut">Cras a elementum dolor. Praesent aliquam sapien ac eros semper ullamcorper. Sed imperdiet enim at sodales suscipit. Aenean eget faucibus ipsum.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img class="owl-lazy" data-src="images/slider-03.jpeg" alt="Lazy Owl Image">
                                 <div class="caption">
-                                    <h2>Heading</h2>
-                                    <p>Description</p>
+                                    <h4 data-animation-in="fadeIn" data-animation-out="animate-out fadeOutDown">Slide 3 Heading</h4>
+                                    <p data-animation-in="zoomInUp" data-animation-out="animate-out rollOut">Cras a elementum dolor. Praesent aliquam sapien ac eros semper ullamcorper. Sed imperdiet enim at sodales suscipit. Aenean eget faucibus ipsum.</p>
                                 </div>
                             </div>
 
