Add notice, teachers page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="right menu">
-                    <a href="#" class="item">Home</a>
+                    <a href="index.html" class="item">Home</a>
                     <a href="#" class="item">Results</a>
 
                     <div class="ui dropdown item">
@@ -36,7 +36,7 @@
                         <i class="dropdown icon"></i>
                         <div class="menu">
                             <a href="#" class="item">Governing Body</a>
-                            <a href="#" class="item">Teacher Information</a>
+                            <a href="teachers.html" class="item">Teacher Information</a>
                             <a href="#" class="item">Staff Information</a>
                         </div>
                     </div>
@@ -50,11 +50,13 @@
                         </div>
                     </div>
 
-                    <a href="#" class="item">Notice</a>
-                    <a href="#" class="item">Gallery</a>
-                    <a href="#" class="item">Contact</a>
+					<a href="notice.html" class="item">Notice</a>
+                    <a href="galary.html" class="item">Gallery</a>
+                    <a href="contact.html" class="item">Contact</a>
                 </div>
             </nav>
+
+            <div class="nav-fix"></div>
 
             <header>
                 <div class="ui grid container">
