add image enlarge plugin, blur on hover

--- a/galary.html
+++ b/galary.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/animate.css">
@@ -69,9 +70,51 @@
                     </div>
                 </div>
 
-                <div class="ui doubling two column relaxed grid container">
+                <div class="ui doubling three column relaxed grid container">
 
+                    <div class="column galary">
+                        <div class="ui segment">
 
+                            <a data-fancybox="gallery" href="images/slider-01.jpeg">
+                                <img class="ui image" src="images/slider-01.jpeg">
+                            </a>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+
+                    <div class="column galary">
+                        <div class="ui segment">
+
+                            <a data-fancybox="gallery" href="images/slider-02.jpeg">
+                                <img class="ui image" src="images/slider-02.jpeg">
+                            </a>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+
+                    <div class="column galary">
+                        <div class="ui segment">
+
+                            <a data-fancybox="gallery" href="images/slider-03.jpeg">
+                                <img class="ui image" src="images/slider-03.jpeg">
+                            </a>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+
+                    <div class="column galary">
+                        <div class="ui segment">
+
+                            <a data-fancybox="gallery" href="images/slider-01.jpeg">
+                                <img class="ui image" src="images/slider-01.jpeg">
+                            </a>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
 
                 </div>
             </section>
@@ -148,6 +191,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/master.js"></script>
     </body>
