--- a/galary.html
+++ b/galary.html
@@ -59,7 +59,7 @@
 
             <div class="nav-fix"></div>
 
-            <section class="about_latest">
+            <section class="galary-page">
 
                 <div class="ui grid container">
                     <div class="column">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <div class="ui doubling three column relaxed grid container">
+                <div class="ui doubling stackable three column relaxed grid container">
 
                     <div class="column galary">
                         <div class="ui segment">
