added content to notice.html

--- a/notice.html
+++ b/notice.html
@@ -76,7 +76,58 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
+                                    <h1>28</h1>
+                                </div>
+                                <div class="thirteen wide column">
+                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
+                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
+                                    <a href="#">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column wow zoomInRight">
+                        <div class="notice">
+
+                            <div class="ui grid notice-item">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
+                                    <h5>APR' 17</h5>
+                                    <h1>28</h1>
+                                </div>
+                                <div class="thirteen wide column">
+                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
+                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
+                                    <a href="#">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column wow zoomInRight">
+                        <div class="notice">
+
+                            <div class="ui grid notice-item">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
+                                    <h5>APR' 17</h5>
+                                    <h1>28</h1>
+                                </div>
+                                <div class="thirteen wide column">
+                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
+                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
+                                    <a href="#">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column wow zoomInRight">
+                        <div class="notice">
+
+                            <div class="ui grid notice-item">
+                                <div class="three wide computer three wide tablet sixteen wide mobile column">
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -110,7 +161,7 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -127,58 +178,7 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
-                                    <h1>28</h1>
-                                </div>
-                                <div class="thirteen wide column">
-                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
-                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
-                                    <a href="#">Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column wow zoomInRight">
-                        <div class="notice">
-
-                            <div class="ui grid notice-item">
-                                <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
-                                    <h1>28</h1>
-                                </div>
-                                <div class="thirteen wide column">
-                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
-                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
-                                    <a href="#">Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column wow zoomInRight">
-                        <div class="notice">
-
-                            <div class="ui grid notice-item">
-                                <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
-                                    <h1>28</h1>
-                                </div>
-                                <div class="thirteen wide column">
-                                    <a href="#" class="notice-link">ALIQUAM CONGUE FERMENTUM NISL</a>
-                                    <p>Turie ntots nascetur riculus mullamale ada odi dio gravida atcur ecuus a lorm ecaistique orci ac sis ultricpharetra gna. Donec accusan malsuad.</p>
-                                    <a href="#">Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column wow zoomInRight">
-                        <div class="notice">
-
-                            <div class="ui grid notice-item">
-                                <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -202,10 +202,10 @@
                     <div class="eight wide computer twelve wide tablet column">
                         <h1 class="ui header">
                             <i class="ui university icon"></i>
-                            School Name
+                            ECHOES ACADEMY
                         </h1>
-                        <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                        <p>Bangladesh</p>
+                        <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                        <p>USA</p>
                     </div>
 
                     <div class="eight wide computer twelve wide tablet column">
@@ -217,9 +217,9 @@
                                     Contact Us
                                 </h1>
 
-                                <p>Mobile: 01711981813</p>
-                                <p>Email: school@example.com</p>
-                                <p>Telephone: 01711981813</p>
+                                <p>Mobile: 610-872-1327</p>
+                                <p>Email: wdriggins@gmail.com</p>
+                                <p>Telephone: 610-872-1327</p>
                             </div>
 
                             <div class="column">
@@ -228,8 +228,8 @@
                                     Location
                                 </h1>
 
-                                <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                                <p>Bangladesh</p>
+                                <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                                <p>USA</p>
                             </div>
                         </div>
                     </div>
