--- a/teachers.html
+++ b/teachers.html
@@ -78,7 +78,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>KEVIN GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -88,7 +88,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LAVADA DRIGGINS</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -98,7 +98,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LAVADA GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -108,7 +108,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>KENNEDY LIAM GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -118,7 +118,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LINCOLN GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -128,7 +128,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LANGSTON GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -138,7 +138,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>REBECCA POPE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -148,7 +148,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>KIM YOUNG</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -158,7 +158,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>MARION CORBIN</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -174,10 +174,10 @@
                     <div class="eight wide computer twelve wide tablet column">
                         <h1 class="ui header">
                             <i class="ui university icon"></i>
-                            School Name
+                            ECHOES ACADEMY
                         </h1>
-                        <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                        <p>Bangladesh</p>
+                        <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                        <p>USA</p>
                     </div>
 
                     <div class="eight wide computer twelve wide tablet column">
@@ -189,9 +189,9 @@
                                     Contact Us
                                 </h1>
 
-                                <p>Mobile: 01711981813</p>
-                                <p>Email: school@example.com</p>
-                                <p>Telephone: 01711981813</p>
+                                <p>Mobile: 610-872-1327</p>
+                                <p>Email: wdriggins@gmail.com</p>
+                                <p>Telephone: 610-872-1327</p>
                             </div>
 
                             <div class="column">
@@ -200,8 +200,8 @@
                                     Location
                                 </h1>
 
-                                <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                                <p>Bangladesh</p>
+                                <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                                <p>USA</p>
                             </div>
                         </div>
                     </div>
