--- a/galary.html
+++ b/galary.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Galary Page</title>
+        <title>Gallery Page</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
@@ -65,7 +65,7 @@
                     <div class="column">
                         <h1 class="ui header horizontal divider center">
                             <i class="ui announcement icon"></i>
-                            GALARY
+                            GALLERY
                         </h1>
                     </div>
                 </div>
@@ -128,10 +128,10 @@
                     <div class="eight wide computer twelve wide tablet column">
                         <h1 class="ui header">
                             <i class="ui university icon"></i>
-                            School Name
+                            ECHOES ACADEMY
                         </h1>
-                        <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                        <p>Bangladesh</p>
+                        <p>1119 HIGHLAND AVENUE, CHESTER PA 19013</p>
+                        <p>USA</p>
                     </div>
 
                     <div class="eight wide computer twelve wide tablet column">
@@ -143,9 +143,9 @@
                                     Contact Us
                                 </h1>
 
-                                <p>Mobile: 01711981813</p>
-                                <p>Email: school@example.com</p>
-                                <p>Telephone: 01711981813</p>
+                                <p>Mobile: 610-872-1327</p>
+                                <p>Email: wdriggins@gmail.com</p>
+                                <p>Telephone: 610-872-1327</p>
                             </div>
 
                             <div class="column">
@@ -154,8 +154,8 @@
                                     Location
                                 </h1>
 
-                                <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                                <p>Bangladesh</p>
+                                <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                                <p>USA</p>
                             </div>
                         </div>
                     </div>
