--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -177,7 +177,7 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -189,7 +189,7 @@
 
                             <div class="ui grid notice-item">
                                 <div class="three wide computer three wide tablet sixteen wide mobile column">
-                                    <h5>APR' 16</h5>
+                                    <h5>APR' 17</h5>
                                     <h1>28</h1>
                                 </div>
                                 <div class="thirteen wide column">
@@ -226,7 +226,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>KEVIN GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -236,7 +236,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LAVADA DRIGGINS</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -246,7 +246,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>LAVADA GREENE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -256,7 +256,7 @@
                         </div>
 
                         <h2>Chairman</h2>
-                        <p>Md.Nurul Islam</p>
+                        <p>REBECCA POPE</p>
                         <p>Lorem Ipsum Lorem Ipsum</p>
                     </div>
 
@@ -272,10 +272,10 @@
                     <div class="eight wide computer twelve wide tablet column">
                         <h1 class="ui header">
                             <i class="ui university icon"></i>
-                            School Name
+                            ECHOES ACADEMY
                         </h1>
-                        <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                        <p>Bangladesh</p>
+                        <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                        <p>USA</p>
                     </div>
 
                     <div class="eight wide computer twelve wide tablet column">
@@ -287,9 +287,9 @@
                                     Contact Us
                                 </h1>
 
-                                <p>Mobile: 01711981813</p>
-                                <p>Email: school@example.com</p>
-                                <p>Telephone: 01711981813</p>
+                                <p>Mobile: 610-872-1327</p>
+                                <p>Email: wdriggins@gmail.com</p>
+                                <p>Telephone: 610-872-1327</p>
                             </div>
 
                             <div class="column">
@@ -298,8 +298,8 @@
                                     Location
                                 </h1>
 
-                                <p>Sathmatha, Nawabbari Rd, Bogra 5800</p>
-                                <p>Bangladesh</p>
+                                <p>1119 HIGHLAND AVENUE, CHESTER, PA 19013</p>
+                                <p>USA</p>
                             </div>
                         </div>
                     </div>
